# hi-speed_stream_processing_for_ai_mini_devices

./: CMakeLists.txt  README.md  _exp_i_ii_iii.txt  audio_morphing_i.txt  convolve_audio.cpp  g-petey_got_me_morphin.txt  g-petey_w-delta.txt  hi-speed.txt  how_to_prep_ml.txt  initial_input_split.cpp  new_main_loop.cpp  scratchy.txt
.github/: FUNDING.yml
audio_processor/: README.md  for_testing.txt
audio_processor/benchmarking/: benchmarking.txt  benchmarking_3.txt  benchmarking_4.txt  benchmarking_5.txt  benchmarking_6.html  benchmarking_7.py  benchmarking_8.txt
audio_processor/build_junk/: how_to_separate_files.txt  module-i_and_module-ii.cpp  module_I_exp_ii_iii.cpp  module_ii.txt  neon_4d_verr.txt
audio_processor/include/: ArmNEON.h  AudioIO.h  DataStructures.h  DeltaProcessor.h  FFTProcessor.h
audio_processor/olds/: AudioIO_old.cpp  AudioIO_oldiii.cpp  main_old.cpp
benchmarking/: benchmarking_2.txt  benchmarking_computational-efficiency-metrics.py
build_junk/: datastream_w_embed.txt  delta_compression_of_convol_4d.cpp  enhanced_feature_extract.cpp
include/: FeatureExtractor.h  Utils.h  Windowing.h
junk/: convolve_audio_neon.cpp  final_neon_optimizations.txt  optimization.txt  w_validation.txt
olds/: AudioIO_oldii.cpp  Windowing_old.cpp
src/: AudioIO.cpp  DeltaProcessor.cpp  FeatureExtractor.cpp  Utils.cpp  Windowing.cpp  initial_input_split.txt  modules_i_ii_iii.cpp  neon_and_4d_data_stream_convolution.cpp  w_validation.cpp  with_header_info_embedded.cpp
temp/: claude_to_g-petey_trans.txt
tests/: test_FeatureExtractor.cpp
(+17 files in other folders)
